@@ -5,7 +5,7 @@
 # of which can be found in the main directory of this project.
 Gentoo Linux Installer
 
-$Id: x86ArchitectureTemplate.py,v 1.88 2005/11/28 21:10:00 codeman Exp $
+$Id: x86ArchitectureTemplate.py,v 1.89 2005/12/17 20:15:00 codeman Exp $
 Copyright 2004 Gentoo Technologies Inc.
 
 
@@ -384,62 +384,20 @@ class x86ArchitectureTemplate(ArchitectureTemplate):
 				start = end + 1
 
 	def _configure_grub(self):
-		build_mode = self._install_profile.get_kernel_build_method()
-		boot_minor = ""
-		boot_device = ""
-		root_device = ""
-		root_minor = ""
-		mbr_device = ""
-		grub_root_minor = ""
-		grub_boot_minor = ""
-		grub_boot_drive = ""
-		grub_root_drive = ""
-		grub_mbr_drive = ""
-		minornum = 0
-		#Assign root to the root mount point to make lines more readable
+		self.build_mode = self._install_profile.get_kernel_build_method()
+		self._gather_grub_drive_info()
 		root = self._chroot_dir
-
-
-		foundboot = False
-		parts = self._install_profile.get_partition_tables()
-		for device in parts:
-			tmp_partitions = parts[device].get_install_profile_structure()
-			for partition in tmp_partitions:
-				mountpoint = tmp_partitions[partition]['mountpoint']
-				if (mountpoint == "/boot"):
-					foundboot = True
-				if (( (mountpoint == "/") and (not foundboot) ) or (mountpoint == "/boot")):
-					boot_minor = str(int(tmp_partitions[partition]['minor']))
-					grub_boot_minor = str(int(tmp_partitions[partition]['minor']) - 1)
-					boot_device = device
-					mbr_device = device
-				if mountpoint == "/":
-					root_minor = str(int(tmp_partitions[partition]['minor']))
-					grub_root_minor = str(int(tmp_partitions[partition]['minor']) - 1)
-					root_device = device
-		#RESET the boot device if one is stored already
-		if self._install_profile.get_boot_device():
-			mbr_device = self._install_profile.get_boot_device()
-			self._logger.log("Found a mbr device: " + mbr_device)
-		
 		exitstatus2, kernel_names = GLIUtility.spawn("ls -1 --color=no " + root + "/boot/kernel-*", return_output=True)
 		self._logger.log("Output of Kernel Names:\n"+kernel_names)
 		if not GLIUtility.exitsuccess(exitstatus2):
 			raise GLIException("BootloaderError", 'fatal', '_configure_grub', "Error listing the kernels in /boot")
-		if build_mode == "genkernel" or self._install_profile.get_kernel_source_pkg() == "livecd-kernel":
+		if self.build_mode == "genkernel" or self._install_profile.get_kernel_source_pkg() == "livecd-kernel":
 			exitstatus3, initrd_names = GLIUtility.spawn("ls -1 --color=no " + root + "/boot/init*", return_output=True)
 			self._logger.log("Output of Initrd Names:\n"+initrd_names)
 		if not GLIUtility.exitsuccess(exitstatus3):
 			raise GLIException("BootloaderError", 'fatal', '_configure_grub', "Error listing the initrds")
 		self._logger.log("Bootloader: the three information gathering commands have been run")
 		
-		grub_boot_drive = self._map_device_to_grub_device(boot_device)
-		grub_root_drive = self._map_device_to_grub_device(root_device)
-		grub_mbr_drive = self._map_device_to_grub_device(mbr_device)
-		
-		if (not grub_root_drive) or (not grub_boot_drive):
-			raise GLIException("BootloaderError", 'fatal', '_configure_grub',"Couldn't find the drive num in the list from the device.map")
-
 		if not kernel_names[0]:
 			raise GLIException("BootloaderError", 'fatal', '_configure_grub',"Error: We have no kernel in /boot to put in the grub.conf file!")
 			
@@ -447,10 +405,10 @@ class x86ArchitectureTemplate(ArchitectureTemplate):
 		#OK, now that we have all the info, let's build that grub.conf
 		newgrubconf = ""
 		newgrubconf += "default 0\ntimeout 30\n"
-		if foundboot:  #we have a /boot
-			newgrubconf += "splashimage=(" + grub_boot_drive + "," + grub_boot_minor + ")/grub/splash.xpm.gz\n"
+		if self.foundboot:  #we have a /boot
+			newgrubconf += "splashimage=(" + self.grub_boot_drive + "," + self.grub_boot_minor + ")/grub/splash.xpm.gz\n"
 		else: #we have / and /boot needs to be included
-			newgrubconf += "splashimage=(" + grub_boot_drive + "," + grub_boot_minor + ")/boot/grub/splash.xpm.gz\n"
+			newgrubconf += "splashimage=(" + self.grub_boot_drive + "," + self.grub_boot_minor + ")/boot/grub/splash.xpm.gz\n"
 		if self._install_profile.get_bootloader_kernel_args(): 
 			bootloader_kernel_args = self._install_profile.get_bootloader_kernel_args()
 		else: bootloader_kernel_args = ""
@@ -466,38 +424,22 @@ class x86ArchitectureTemplate(ArchitectureTemplate):
 		#i think this means take the last one it finds.. i.e. the newest.
 		
 		newgrubconf += "title=Gentoo Linux\n"
-		newgrubconf += "root (" + grub_boot_drive + "," + grub_boot_minor + ")\n"
-		if build_mode != "genkernel" and self._install_profile.get_kernel_source_pkg() != "livecd-kernel":  #using CUSTOM kernel
-			if foundboot:
-				newgrubconf += "kernel " + grub_kernel_name[5:] + " root="+root_device+root_minor+"\n"
+		newgrubconf += "root (" + self.grub_boot_drive + "," + self.grub_boot_minor + ")\n"
+		if self.build_mode != "genkernel" and self._install_profile.get_kernel_source_pkg() != "livecd-kernel":  #using CUSTOM kernel
+			if self.foundboot:
+				newgrubconf += "kernel " + grub_kernel_name[5:] + " root="+self.root_device+self.root_minor+"\n"
 			else:
-				newgrubconf += "kernel /boot"+ grub_kernel_name[5:] + " root="+root_device+root_minor+"\n"
+				newgrubconf += "kernel /boot"+ grub_kernel_name[5:] + " root="+self.root_device+self.root_minor+"\n"
 		else: #using genkernel so it has an initrd.
-			if foundboot:
+			if self.foundboot:
 				newgrubconf += "kernel " + grub_kernel_name[5:] + " root=/dev/ram0 init=/linuxrc ramdisk=8192 real_root="
-				newgrubconf += root_device + root_minor + " " + bootloader_kernel_args + "\n"
+				newgrubconf += self.root_device + self.root_minor + " " + bootloader_kernel_args + "\n"
 				newgrubconf += "initrd " + grub_initrd_name[5:] + "\n"
 			else:
 				newgrubconf += "kernel /boot" + grub_kernel_name[5:] + " root=/dev/ram0 init=/linuxrc ramdisk=8192 real_root="
-				newgrubconf += root_device + root_minor + " " + bootloader_kernel_args + "\n"
+				newgrubconf += self.root_device + self.root_minor + " " + bootloader_kernel_args + "\n"
 				newgrubconf += "initrd /boot" + grub_initrd_name[5:] + "\n"
 		
-		#-------------------------------------------------------------
-		#OK, now that the file is built.  Install grub.
-		#cp /proc/mounts /etc/mtab
-		#grub-install --root-directory=/boot /dev/hda
-		#shutil.copy("/proc/mounts",root +"/etc/mtab")
-		grubinstallstring = "echo -en 'root ("+grub_boot_drive + "," + grub_boot_minor + ")\n"
-		if not self._install_profile.get_boot_loader_mbr():
-			grubinstallstring +="setup ("+grub_boot_drive + "," + grub_boot_minor + ")\n"
-		else:
-			grubinstallstring +="setup ("+grub_mbr_drive+")\n"
-		grubinstallstring += "quit\n' | "+root+"/sbin/grub --batch --no-floppy"
-		if self._debug: self._logger.log("DEBUG: _configure_grub(): Grub install string: " + grubinstallstring)
-		exitstatus = GLIUtility.spawn(grubinstallstring, logfile=self._compile_logfile, append_log=True)
-		if not GLIUtility.exitsuccess(exitstatus):
-			raise GLIException("GrubInstallError", 'fatal', '_configure_grub', "Could not install grub!")
-		self._logger.log("Bootloader: grub has been installed!")
 		#now make the grub.conf file
 		file_name = root + "/boot/grub/grub.conf"	
 		try:
@@ -508,35 +450,61 @@ class x86ArchitectureTemplate(ArchitectureTemplate):
 		f.writelines(newgrubconf)
 		f.close()
 		self._logger.log("Grub installed and configured. Contents of grub.conf:\n"+newgrubconf)
-
-	def _configure_lilo(self):
-		build_mode = self._install_profile.get_kernel_build_method()
-		boot_device = ""
-		boot_minor = ""
-		root_device = ""
-		root_minor = ""
+		self._logger.log("Grub has not yet been run.  If a normal install, it will now be run.")
+		
+	def _gather_grub_drive_info(self):
+		self.boot_minor = ""
+		self.boot_device = ""
+		self.root_device = ""
+		self.root_minor = ""
+		self.mbr_device = ""
+		self.grub_root_minor = ""
+		self.grub_boot_minor = ""
+		self.grub_boot_drive = ""
+		self.grub_root_drive = ""
+		self.grub_mbr_drive = ""
 		minornum = 0
 		#Assign root to the root mount point to make lines more readable
 		root = self._chroot_dir
-		file_name3 = root + "/boot/kernel_name"
-		foundboot = False
+
+
+		self.foundboot = False
 		parts = self._install_profile.get_partition_tables()
 		for device in parts:
 			tmp_partitions = parts[device].get_install_profile_structure()
 			for partition in tmp_partitions:
 				mountpoint = tmp_partitions[partition]['mountpoint']
 				if (mountpoint == "/boot"):
-					foundboot = True
-				if (( (mountpoint == "/") and (not foundboot) ) or (mountpoint == "/boot")):
-					boot_minor = str(int(tmp_partitions[partition]['minor']))
-					boot_device = device
+					self.foundboot = True
+				if (( (mountpoint == "/") and (not self.foundboot) ) or (mountpoint == "/boot")):
+					self.boot_minor = str(int(tmp_partitions[partition]['minor']))
+					self.grub_boot_minor = str(int(tmp_partitions[partition]['minor']) - 1)
+					self.boot_device = device
+					self.mbr_device = device
 				if mountpoint == "/":
-					root_minor = str(int(tmp_partitions[partition]['minor']))
-					root_device = device
+					self.root_minor = str(int(tmp_partitions[partition]['minor']))
+					self.grub_root_minor = str(int(tmp_partitions[partition]['minor']) - 1)
+					self.root_device = device
+		#RESET the boot device if one is stored already
+		if self._install_profile.get_boot_device():
+			self.mbr_device = self._install_profile.get_boot_device()
+			self._logger.log("Found a mbr device: " + self.mbr_device)
+		
+		self.grub_boot_drive = self._map_device_to_grub_device(self.boot_device)
+		self.grub_root_drive = self._map_device_to_grub_device(self.root_device)
+		self.grub_mbr_drive = self._map_device_to_grub_device(self.mbr_device)
+		
+		if (not self.grub_root_drive) or (not self.grub_boot_drive):
+			raise GLIException("BootloaderError", 'fatal', '_gather_grub_drive_info',"Couldn't find the drive num in the list from the device.map")
+
+	def _configure_lilo(self):
+		self.build_mode = self._install_profile.get_kernel_build_method()
+		self._gather_lilo_drive_info()
+		root = self._chroot_dir
 		exitstatus0 = GLIUtility.spawn("ls "+root+"/boot/kernel-* > "+file_name3)
 		if (exitstatus0 != 0):
 			raise GLIException("BootloaderError", 'fatal', '_configure_lilo', "Could not list kernels in /boot or no kernels found.")
-		if build_mode == "genkernel" or self._install_profile.get_kernel_source_pkg() == "livecd-kernel":
+		if self.build_mode == "genkernel" or self._install_profile.get_kernel_source_pkg() == "livecd-kernel":
 			exitstatus1 = GLIUtility.spawn("ls "+root+"/boot/init* >> "+file_name3)
 			if (exitstatus1 != 0):
 				raise GLIException("BootloaderError", 'fatal', '_configure_lilo', "Could not list initrds in /boot")
@@ -554,9 +522,9 @@ class x86ArchitectureTemplate(ArchitectureTemplate):
 		#time to build the lilo.conf
 		newliloconf = ""
 		if self._install_profile.get_boot_loader_mbr():
-			newliloconf += "boot="+boot_device+"   # Install LILO in the MBR \n"
+			newliloconf += "boot="+self.mbr_device+"   # Install LILO in the MBR \n"
 		else:
-			newliloconf += "boot="+boot_device+boot_minor+"   # Install LILO in the MBR \n"
+			newliloconf += "boot="+self.boot_device+self.boot_minor+"   # Install LILO in the MBR \n"
 		newliloconf += "prompt                    # Give the user the chance to select another section\n"
 		newliloconf += "timeout=50                # Wait 5 (five) seconds before booting the default section\n"
 		newliloconf += "default=gentoo            # When the timeout has passed, boot the \"gentoo\" section\n"
@@ -566,13 +534,13 @@ class x86ArchitectureTemplate(ArchitectureTemplate):
 		newliloconf += "vga=788                   # Framebuffer setting. Adjust to your own will\n"
 		newliloconf += "image=/boot"+kernel_name[0][5:]+" \n"
 		newliloconf += "  label=gentoo \n  read-only \n"
-		if build_mode != "genkernel" and self._install_profile.get_kernel_source_pkg() != "livecd-kernel": 
-			newliloconf += "  root="+root_device+root_minor+" \n"
+		if self.build_mode != "genkernel" and self._install_profile.get_kernel_source_pkg() != "livecd-kernel": 
+			newliloconf += "  root="+self.root_device+self.root_minor+" \n"
 			if bootloader_kernel_args:
 				newliloconf += "  append=\""+bootloader_kernel_args+"\" \n"
 		else:
 			newliloconf += "  root=/dev/ram0 \n"
-			newliloconf += "  append=\"init=/linuxrc ramdisk=8192 real_root="+root_device+root_minor + " " + bootloader_kernel_args + "\" \n"
+			newliloconf += "  append=\"init=/linuxrc ramdisk=8192 real_root="+self.root_device+self.root_minor + " " + bootloader_kernel_args + "\" \n"
 			newliloconf += "  initrd=/boot"+kernel_name[1][5:] + "\n\n"
 		newliloconf = self._lilo_add_windows(newliloconf)
 		#now make the lilo.conf file
@@ -584,12 +552,37 @@ class x86ArchitectureTemplate(ArchitectureTemplate):
 		f = open(file_name, 'w')
 		f.writelines(newliloconf)
 		f.close()
-		#-------------------------------------------------------------
-		#OK, now that the file is built.  Install lilo.
-		exitstatus = GLIUtility.spawn("/sbin/lilo",chroot=self._chroot_dir)
-		if exitstatus != 0:
-			raise GLIException("LiloInstallError", 'fatal', '_configure_lilo', "Running lilo failed!")
-		self._logger.log("Lilo installed, configured, and run.")
+		self._logger.log("Lilo installed and configured.  Not run yet.")
+		
+	def _gather_lilo_drive_info(self):
+		self.boot_device = ""
+		self.boot_minor = ""
+		self.root_device = ""
+		self.root_minor = ""
+		self.mbr_device = ""
+		minornum = 0
+		#Assign root to the root mount point to make lines more readable
+		root = self._chroot_dir
+		file_name3 = root + "/boot/kernel_name"
+		self.foundboot = False
+		parts = self._install_profile.get_partition_tables()
+		for device in parts:
+			tmp_partitions = parts[device].get_install_profile_structure()
+			for partition in tmp_partitions:
+				mountpoint = tmp_partitions[partition]['mountpoint']
+				if (mountpoint == "/boot"):
+					self.foundboot = True
+				if (( (mountpoint == "/") and (not self.foundboot) ) or (mountpoint == "/boot")):
+					self.boot_minor = str(int(tmp_partitions[partition]['minor']))
+					self.boot_device = device
+					self.mbr_device = device
+				if mountpoint == "/":
+					self.root_minor = str(int(tmp_partitions[partition]['minor']))
+					self.root_device = device
+		#RESET the boot device if one is stored already
+		if self._install_profile.get_boot_device():
+			self.mbr_device = self._install_profile.get_boot_device()
+			self._logger.log("Found a mbr device: " + self.mbr_device)			
 		
 	def _lilo_add_windows(self, newliloconf):
 		parts = self._install_profile.get_partition_tables()
@@ -624,3 +617,43 @@ class x86ArchitectureTemplate(ArchitectureTemplate):
 			if file[i][6:-1] == device:
 				return file[i][1:4]
 		raise GLIException("BootloaderError", 'fatal', '_map_device_to_grub_device', "ERROR, could not map"+device+" to anything in the device map")
+
+	def setup_and_run_bootloader(self):
+		bootloader_pkg = self._install_profile.get_boot_loader_pkg()
+		if bootloader_pkg.lower() == "none":
+			return
+		elif "grub" in bootloader_pkg: # this catches 'grub-static' as well as '=sys-boot/grub-0.95*'
+			self._setup_grub()
+		elif "lilo" in bootloader_pkg:
+			self._setup_lilo()
+		# probably should add in some more bootloaders
+		# dvhtool, raincoat, netboot, gnu-efi, cromwell, syslinux, psoload
+		else:
+			raise GLIException("BootLoaderError",'fatal','setup_and_run_bootloader',"Don't know how to configure this bootloader: "+bootloader_pkg)
+
+	def _setup_grub(self):
+		#-------------------------------------------------------------
+		#OK, now that the file is built.  Install grub.
+		#cp /proc/mounts /etc/mtab
+		#grub-install --root-directory=/boot /dev/hda
+		#shutil.copy("/proc/mounts",root +"/etc/mtab")
+		self._gather_grub_drive_info()
+		grubinstallstring = "echo -en 'root ("+self.grub_boot_drive + "," + self.grub_boot_minor + ")\n"
+		if not self._install_profile.get_boot_loader_mbr():
+			grubinstallstring +="setup ("+self.grub_boot_drive + "," + self.grub_boot_minor + ")\n"
+		else:
+			grubinstallstring +="setup ("+self.grub_mbr_drive+")\n"
+		grubinstallstring += "quit\n' | "+self._chroot_dir+"/sbin/grub --batch --no-floppy"
+		if self._debug: self._logger.log("DEBUG: _configure_grub(): Grub install string: " + grubinstallstring)
+		exitstatus = GLIUtility.spawn(grubinstallstring, logfile=self._compile_logfile, append_log=True)
+		if not GLIUtility.exitsuccess(exitstatus):
+			raise GLIException("GrubInstallError", 'fatal', '_setup_grub', "Could not install grub!")
+		self._logger.log("Bootloader: grub has been installed!")
+
+	def _setup_lilo(self):
+		#-------------------------------------------------------------
+		#OK, now that the file is built.  Install lilo.
+		exitstatus = GLIUtility.spawn("/sbin/lilo",chroot=self._chroot_dir)
+		if exitstatus != 0:
+			raise GLIException("LiloInstallError", 'fatal', '_setup_lilo', "Running lilo failed!")
+		self._logger.log("Bootloader: lilo has been run/installed!")
