@@ -1,10 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.530 2005/12/13 02:37:15 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.531 2005/12/17 20:14:59 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
+  17 Dec 2005; Preston Cody <codeman@gentoo.org>
+  x86AT: separated out emerge/configure from running of bootloader
+  added MBR drive support to lilo.
+  these changes will likely not work.
+  AT: added setup_and_run_bootloader step.
+  
   12 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
   call generated code in a function
